# chess

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: chess_board.hpp  move.hpp  piece.hpp
src/: chess_board.cpp
